[metadata]
name = nasty-typeshed
project_urls =
    Repository = https://github.com/lschmelzeisen/nasty-typeshed
    Issue Tracker = https://github.com/lschmelzeisen/nasty-typeshed/issues
author = Lukas Schmelzeisen
author_email = me@lschmelzeisen.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Typing :: Typed
license = Apache License, Version 2.0
license_file = LICENSE
description = Python stub files created during NASTY's development.
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any

[options]
zip_safe = True
setup_requires =
    setuptools_scm[toml]~=3.4
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
packages =
    nasty_typeshed
    _pytest-stubs
    bokeh-stubs
    elasticsearch-stubs
    elasticsearch_dsl-stubs
    nox-stubs
    overrides-stubs
    pytest-stubs
    responses-stubs
    setuptools-stubs
    somajo-stubs
    stopwordsiso-stubs
    tqdm-stubs
    tweepy-stubs
    typing_inspect-stubs
    zstandard-stubs

[options.extras_require]
test =
    mypy~=0.770
dev =
    autoflake~=1.3
    black==19.10b0
    flake8~=3.8
    flake8-bandit~=2.1
    flake8-bugbear~=20.1
    flake8-builtins~=1.5
    flake8-comprehensions~=3.2
    flake8-eradicate~=0.3
    flake8-print~=3.1
    flake8-pyi~=20.5
    isort[pyproject]~=4.3
    licenseheaders~=0.8
    nox~=2019.11
    pep8-naming~=0.10
    twine~=3.1


[flake8]
# required for Black compatibility
max-line-length = 88
# flake8-mccabe
max-complexity = 10
select =
    # pycodestyle / flake8-eradicate
    E
    W
    # flake8
    F
    # flake8-mccabe / flake8-comprehensions
    C
    # flake8-builtins
    A
    # flake8-bugbear / flake8-bandit
    B
    # flake8-pyi
    Y
    # flake8-print
    T
    # pep8-naming
    N
ignore =
    # required for Black compatibility
    E203
    W503
    # disable class-attributes overlapping with builtins
    A003
per-file-ignores =
    # Black formats stub files differently
    src/*.pyi:E301,E302,E305,E701,E704,W504

[mypy]
python_version = 3.6
platform = linux
pretty = True

; -- Disallow dynamic typing ---------------------------------------------------
disallow_any_unimported = True
; Sadly, I don't know how to type decorators when enabling the next three.
;disallow_any_expr = True
;disallow_any_decorated = True
;disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True

; -- Untyped definitions and calls ---------------------------------------------
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True

; -- None and Optional handling ------------------------------------------------
no_implicit_optional = True
strict_optional = True

; -- Configuring warnings ------------------------------------------------------
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

; -- Miscellaneous strictness flags --------------------------------------------
allow_redefinition = True
implicit_reexport = False
strict_equality = True

; -- Miscellaneous -------------------------------------------------------------
error_summary = False
warn_unused_configs = True

; __init__.py's import of _version.py contains type ignore comment should file
; not exist. If the file does exist it is detected as unused ignore comment.
[mypy-nasty_typeshed]
warn_unused_ignores = False
